--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box; 
+  font-family: "Roboto", sans-serif;
+  font-weight: 200;
+  overscroll-behavior-y: none;
+  color: white;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  background-color: black;
+  margin: 0;
+}
+
+h2 {
+  font-size: 4rem;
+  font-weight: 400;
+}
