--- a/src/app/landing/about/details-displayer/details-displayer.html
+++ b/src/app/landing/about/details-displayer/details-displayer.html
@@ -1,15 +1,15 @@
   @switch (details()) {
     @case ("About") {
-      <h2 id="about-title">
+      <h2 appReveal id="about-title" class="reveal-text">
         ABOUT
       </h2>
-      <p class="about-text">
-        À la recherche d’une alternance en développement Full Stack,
-        je souhaite m’investir dans des projets concrets où le code devient un langage vivant,
-        au service d’idées utiles et bien construites. Curieux et enthousiaste,
-        j’aborde chaque défi comme une occasion d’apprendre, de progresser et de donner du sens à ce que je développe.
+      <p appReveal class="about-text reveal-text">
+        Actuellement à la recherche d’une alternance en tant que développeur full-stack,
+        je suis passionné et compétent dans plusieurs technologies.
+        Sensible à l’éco-développement et à la qualité du code,
+        je suis convaincu que ce métier mêle, à bien des égards, l’ingénierie et l’art.
       </p>
-      <p class="about-text">
+      <p appReveal class="about-text reveal-text">
         Autonome, enthousiaste et impliqué,
         je m’intègre facilement à une équipe et avance avec rigueur et plaisir.
         Apprendre, expérimenter et contribuer activement font partie de mon quotidien,
@@ -17,36 +17,38 @@
       </p>
     }
     @case ("Angular") {
-      <h2 id="about-title">
+      <h2 appReveal id="about-title" class="reveal-text">
         ANGULAR
       </h2>
-      <p class="about-text">
-        À la recherche d’une alternance en développement Full Stack,
-        je souhaite m’investir dans des projets concrets où le code devient un langage vivant,
-        au service d’idées utiles et bien construites. Curieux et enthousiaste,
-        j’aborde chaque défi comme une occasion d’apprendre, de progresser et de donner du sens à ce que je développe.
+      <p appReveal class="about-text">
+        Ayant étudié avec rigueur auprès d’experts de cette technologie,
+        j’ai développé des compétences solides en Angular.
+        Je possède une aisance avec les dernières API,
+        telles que les Signals ou l’injection de dépendances,
+        ainsi qu’une bonne maîtrise de bibliothèques de composants comme PrimeNG.
+      </p>
+    }
+    @case ("Python") {
+      <h2 appReveal id="about-title" class="reveal-text">
+        Python
+      </h2>
+      <p appReveal class="about-text reveal-text">
+        Après avoir étudié durant plusieurs années l’ingénierie logicielle ainsi que le Python en milieu scolaire,
+        j’ai approfondi mon utilisation de ce langage à travers la création de réseaux neuronaux.
+        J’ai ainsi acquis une compréhension approfondie du fonctionnement des intelligences artificielles,
+        mais également de leur intégration au sein de produits logiciels.
       </p>
     }
     @case ("Java") {
-      <h2 id="about-title">
+      <h2 appReveal id="about-title" class="reveal-text">
         JAVA
       </h2>
-      <p class="about-text">
-        À la recherche d’une alternance en développement Full Stack,
-        je souhaite m’investir dans des projets concrets où le code devient un langage vivant,
-        au service d’idées utiles et bien construites. Curieux et enthousiaste,
-        j’aborde chaque défi comme une occasion d’apprendre, de progresser et de donner du sens à ce que je développe.
+      <p appReveal class="about-text reveal-text">
+        Dans le cadre de mon parcours en Java,
+        j’ai déjà travaillé sur des projets utilisant Spring Boot et les principes de la Clean Architecture,
+        encadré par des développeurs seniors pratiquant ce type d’approche.
+        Cette expérience m’a permis de consolider ma compréhension des bonnes pratiques de conception,
+        et de leur application en contexte professionnel.
       </p>
     }
-  @case ("Python") {
-    <h2 id="about-title">
-      Python
-    </h2>
-    <p class="about-text">
-      À la recherche d’une alternance en développement Full Stack,
-      je souhaite m’investir dans des projets concrets où le code devient un langage vivant,
-      au service d’idées utiles et bien construites. Curieux et enthousiaste,
-      j’aborde chaque défi comme une occasion d’apprendre, de progresser et de donner du sens à ce que je développe.
-    </p>
-  }
 }
