--- a/src/app/landing/about/details-displayer/details-displayer.scss
+++ b/src/app/landing/about/details-displayer/details-displayer.scss
@@ -1,3 +1,9 @@
+* {opacity: 0;}
+
+h2 {
+  font-weight: 600;
+  font-family: "Cossette Titre", sans-serif;
+}
 .about-text {
   font-size: 1.3rem;
   font-weight: 400;
