--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -1,5 +1,9 @@
 <div class="landing-container"> 
   <app-header />
-  <app-landing-hero />
-  <app-about />
+  <div class="sections-container">
+    <app-landing-hero />
+    <app-about />    
+    <app-work />
+    <app-contact />
+  </div>
 </div>
