--- a/src/app/landing/landing.scss
+++ b/src/app/landing/landing.scss
@@ -1,4 +1,9 @@
 .landing-container {
   display: flex;
   flex-direction: column;
-}
+  .sections-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+ }
