--- a/src/app/landing/about/about.html
+++ b/src/app/landing/about/about.html
@@ -1,5 +1,4 @@
-<section id="about" class="about-section" aria-labelledby="about-title">
-
+<section id="about" class="about-section">
   <div class="container">
 
     <div class="left">
