--- a/src/app/landing/header/header.scss
+++ b/src/app/landing/header/header.scss
@@ -1,36 +1,52 @@
 header {
   position: fixed;
   z-index: 5;
-
   width: 100vw;
-  height: 65px;
-  
+  height: 65px;  
   display: flex;
   justify-content: center;
   align-items: center;
-
   .header-container {
     width: 97%;
     height: 100%;
     display: flex;
-
     align-items: center;
     justify-content: space-between;
     border-bottom: solid 0.2px rgba(255, 255, 255, 0.193);
-    
+    @media (max-width: 768px) {
+      width: 90%;
+    }
     .name-displayer {
       display: flex;
       p {
         margin: 0;
         width: 100%;
-        #name {
-          font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-          opacity: 1;
-          font-weight: 400;
+        .name {
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        opacity: 1;
+        font-weight: 400;
+        @media (max-width: 768px) {
+          &::after {
+            content: "\A";
+            white-space: pre;
+          }
         }
-        #lastname {
+        }
+        .lastname {
           font-family:'Courier New', Courier, monospace;
           opacity: 0.6;
+          &.mobile {
+            display: none;
+            @media (max-width: 768px) {
+              display: inline;
+            }
+          }
+          &.desktop {
+             @media (max-width: 768px) {
+              display: none;
+            }
+          }
+
         }
       }
     }
