--- a/src/app/landing/header/navbar/navbar.html
+++ b/src/app/landing/header/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li><a (click)="scrollToSection('about')">about</a></li>
-    <li><a (click)="scrollToSection('work')">work</a></li>
-    <li><a (click)="scrollToSection('contact')">contact</a></li>
+    <li><a href="#about-section"(click)="scrollToSection('about')">about</a></li>
+    <li><a href="#work-section"(click)="scrollToSection('work')">work</a></li>
+    <li><a href="#contact-section"(click)="scrollToSection('contact')">contact</a></li>
   </ul>
 </nav>
