style: adjust mobile support
fixed Font-size and family on mobile

--- a/src/app/landing/contact/footer-board/contact-links/contact-links.html
+++ b/src/app/landing/contact/footer-board/contact-links/contact-links.html
@@ -1,7 +1,10 @@
 <div class="contact-links" [style.--magic-color]="magicColor()">
   <div class="link-subtitle">
     <h3>En recherche d'une alternance.</h3>
-    <p>Ci-après mes coordonnées, contactez-moi par mail pour toute proposition</p>
+    <p>
+      Ci-après mes coordonnées, contactez-moi 
+      <br class="line-break">par mail pour toute proposition
+    </p>
   </div>
   <div class="link-container">
     <app-mail-link />
