--- a/src/app/landing/contact/footer-board/contact-links/contact-links.scss
+++ b/src/app/landing/contact/footer-board/contact-links/contact-links.scss
@@ -14,10 +14,22 @@
       font-size: 2rem;
       font-weight: 500;
       margin: 0;
+      @media (max-width: 768px) {
+        font-size: 1.4rem;
+      }
+      @media (max-width: 480px) {
+        font-size: 1.1rem;
+      }
     }
     p {
       font-size: 1rem;
       margin: 1rem;
+      text-align: center;
+      @media (min-width: 1025px) {
+        br {
+          display: none;
+        }
+      }
     }
   }
   .link-container {
