--- a/src/app/landing/contact/footer-board/footer-board.html
+++ b/src/app/landing/contact/footer-board/footer-board.html
@@ -1,7 +1,7 @@
 <div class="footer-board" [style.border-top-color]="magicColor()">
   <div class="cv-app">
     <div class="cv-container">
-      <p>Télécharger mon cv</p>
+      <p>Télécharger <br class="line-break"> mon cv</p>
       <app-download-button />
     </div>
   </div>
