--- a/src/app/landing/contact/footer-board/footer-board.scss
+++ b/src/app/landing/contact/footer-board/footer-board.scss
@@ -8,6 +8,7 @@
   border-top: 5px #ffa500 solid;
   @media (max-width: 768px) {
     flex-direction: column;
+    height: 90vh;
   }
   .cv-app {
     display: grid;
@@ -16,6 +17,7 @@
     height: 60%;
     @media (max-width: 768px) {
       width: 100%;
+      order: 3;
     }
     .cv-container {
       display: grid;
@@ -23,6 +25,18 @@
       p {
         font-size: 2rem;
         font-weight: 400;
+        text-align: center;
+        @media (min-width: 1025px) {
+          br {
+            display: none;
+          }
+        }
+        @media (max-width: 480px) {
+          font-size: 1.3rem;
+          br {
+            display: block;
+          }
+        }
       }
     }
   }
@@ -33,7 +47,9 @@
     background-color: grey;
     opacity: 0.4;
     @media (max-width: 768px) {
-      display: none;
+      width: 70%;
+      height: 1px;
+      order: 2;
     }
   }
 
@@ -44,6 +60,9 @@
     height: 60%;
     @media (max-width: 768px) {
       width: 100%;
+      height: 100%;
+      padding-top: 2rem;
+      order: 1;
     }
   }
 }
