--- a/src/app/landing/work/work.scss
+++ b/src/app/landing/work/work.scss
@@ -5,21 +5,30 @@ section.work-section {
   .title-container {
     display: flex;
     height: 10vh;
-    justify-content: right;
+    justify-content: flex-end;
+    align-items: baseline;
     width: 90%;
     margin: auto;
     p {
       opacity: 0;
       margin: 0;
       line-height: 1rem;
-      display: flex;
-      align-items: flex-end;
+      @media (max-width: 768px) {
+        font-size: 0.7rem;
+      }
+      @media (max-width: 480px) {
+        font-family: "Stack Sans Notch", sans-serif;
+      }
     }
     h2 { 
       margin: 0;
-      width: fit-content;
-      height: fit-content;
       opacity: 0;
+      @media (max-width: 768px) {
+        font-size: 3rem;
+      }
+      @media (max-width: 480px) {
+        font-family: "Stack Sans Notch", sans-serif;
+      }
     }
   }
 
