--- a/src/app/landing/landing-hero/background-canva/background-canva.scss
+++ b/src/app/landing/landing-hero/background-canva/background-canva.scss
@@ -1,6 +1,7 @@
 .canvas-container{
   width:100%;
   height:150vh;
+  max-height: 2160px;
   background-color:#000;
   touch-action: auto !important;
   canvas {
