--- a/src/app/landing/landing-hero/background-canva/background-canva.html
+++ b/src/app/landing/landing-hero/background-canva/background-canva.html
@@ -1,1 +1,3 @@
-<div #canvasContainer class="canvas-container"></div>
+<div class="canvas-wrapper">
+  <div #canvasContainer class="canvas-container"></div>
+</div>
