--- a/src/app/landing/landing-hero/background-canva/background-canva.scss
+++ b/src/app/landing/landing-hero/background-canva/background-canva.scss
@@ -1,10 +1,24 @@
-.canvas-container{
-  width:100%;
-  height:150vh;
-  max-height: 2160px;
-  background-color:#000;
-  touch-action: auto !important;
-  canvas {
+.canvas-wrapper {
+  position: relative;
+  .canvas-container{
+    width:100%;
+    height:150vh;
+    max-height: 2160px;
+    background-color:#000;
     touch-action: auto !important;
   }
+}
+
+.canvas-wrapper::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 60%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
