style(cursor): animated cursor active/hovering

--- a/src/app/@shared/components/custom-cursor/custom-cursor.html
+++ b/src/app/@shared/components/custom-cursor/custom-cursor.html
@@ -1,4 +1,12 @@
 <div class="cursor-wrapper" [style.--magic-color]="magicColor()">
-  <div #outer class="cursor-outer"></div>
-  <div #inner class="cursor-inner"></div>
+  <div #outer 
+       class="cursor-outer" 
+       [class.is-hovering]="isHovering()" 
+       [class.is-pressed]="isPressed()">
+  </div>
+  <div #inner 
+       class="cursor-inner" 
+       [class.is-hovering]="isHovering()" 
+       [class.is-pressed]="isPressed()">
+  </div>
 </div>
