--- a/src/app/landing/header/header.html
+++ b/src/app/landing/header/header.html
@@ -1,4 +1,4 @@
-<header #header [class.scrolled]="isScrolled()">
+<header #header>
   <div class="header-container">
     <div class="name-displayer">
       <p>
