--- a/src/app/landing/header/header.scss
+++ b/src/app/landing/header/header.scss
@@ -1,11 +1,14 @@
 header {
   position: fixed;
-  z-index: 5;
-  width: 100vw;
+  z-index: 2;
+  width: 100%;
   height: 65px;  
   display: flex;
   justify-content: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4px);
+  will-change: opacity, transform;
   .header-container {
     width: 97%;
     height: 100%;
@@ -51,10 +54,5 @@ header {
       }
     }
     
-  }
-  &.scrolled {
-    background: rgba(0, 0, 0, 0.097);
-    backdrop-filter: blur(4px);
-    transition: 0.4s;
   }
 }
