--- a/src/app/landing/work/fullscreen-work/fullscreen-work.scss
+++ b/src/app/landing/work/fullscreen-work/fullscreen-work.scss
@@ -11,4 +11,30 @@
 
 .overlay-content {
   color: white;
+  width: 100%;
+  .main-wrapper {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .left {
+      button {
+        border: none;
+        background-color: rgb(22, 22, 22);
+        border-radius: 0.2rem;
+        color: wheat;
+        cursor: pointer;
+      }
+      h3 {
+        font-size: 4.5rem;
+        margin: 0;
+        text-align: right;
+        font-family: "Stack Sans Notch", sans-serif;
+      }
+    }
+    .right {
+      display: flex;
+      align-items: center;
+    }
+  }
 }
