refactor: fullscreen-work adjusted

--- a/src/app/landing/contact/contact.html
+++ b/src/app/landing/contact/contact.html
@@ -1,6 +1,6 @@
 <section id="contact" class="contact-section">
   <div class="container">
-    <h2>CONTACT</h2>
+    <h2 appReveal>CONTACT</h2>
     <app-footer-board />
   </div>
 </section>
