--- a/src/app/landing/contact/footer-board/contact-links/contact-links.html
+++ b/src/app/landing/contact/footer-board/contact-links/contact-links.html
@@ -9,8 +9,16 @@
   <div class="link-container">
     <app-mail-link />
     <ul>
-      <li class="contact-link-linkedin"><a href="https://www.linkedin.com/in/pierre-charles-sénard-vallois-742a52309/" target="_blank">LinkedIn</a></li>
-      <li class="contact-link-github"><a href="https://github.com/CharlesVall" target="_blank">GitHub</a></li>
+      <li class="contact-link-linkedin">
+        <a href="https://www.linkedin.com/in/pierre-charles-sénard-vallois-742a52309/" target="_blank">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+      </li>
+      <li class="contact-link-github">
+        <a href="https://github.com/CharlesVall" target="_blank">
+          <i class="fa-brands fa-github"></i>        
+        </a>
+      </li>
     </ul>
   </div>
 </div>
