--- a/src/app/landing/about/details-displayer/details-displayer.scss
+++ b/src/app/landing/about/details-displayer/details-displayer.scss
@@ -3,6 +3,15 @@
 h2 {
   font-weight: 600;
   font-family: "Cossette Titre", sans-serif;
+  .show-on-mobile {
+    display: block&;
+  }
+  
+  @media (max-width: 1024px) {
+    .show-on-mobile {
+      display: inline-block;
+    }
+  }
 }
 .about-text {
   font-size: 1.3rem;
