--- a/src/app/landing/landing.scss
+++ b/src/app/landing/landing.scss
@@ -1,6 +1,7 @@
 .landing-container {
   display: flex;
   flex-direction: column;
+  margin: auto;
   .sections-container {
     display: flex;
     flex-direction: column;
