--- a/src/app/landing/work/fullscreen-work/fullscreen-work.scss
+++ b/src/app/landing/work/fullscreen-work/fullscreen-work.scss
@@ -20,8 +20,9 @@
     color: white;
     height: 100%;
     width: 100%;
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     animation: slideIn 0.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
     .main-wrapper {
       width: 90%;
@@ -30,8 +31,12 @@
       align-items: center;
       @media (max-width: 768px) {
         position: relative;
-        width: 100%;
+        width: 90%;
         height: 100%;
+        flex-direction: column;
+      }
+      @media (max-width: 480px) {
+        width: 100%;
       }
       .left {
         display: flex;
@@ -42,11 +47,35 @@
         @media (max-width: 1024px) {
           max-width: 18rem;
         }
+        @media (max-width: 768px) {
+          position: absolute;
+          top: auto;
+          left: auto;
+          right: auto;
+          margin: 0 auto;       
+          width: 100%;            
+          max-width: 100%;       
+          height: auto;
+          z-index: 2;
+        }
+        @media (max-width: 480px) {
+          margin: 2rem;
+          margin-left: 6rem;
+        }
       }
       .right {
         display: flex;
         align-items: center;
+        justify-content: center;
         overflow: hidden;
+        @media (max-width: 768px) {
+          width: 100%;
+          height: 100%;
+          flex: 1;               
+          justify-content: center;
+          align-items: center;   
+          margin-top: 4rem;     
+        }
       }
     }
 
