--- a/src/app/landing/contact/footer-board/contact-links/contact-links.html
+++ b/src/app/landing/contact/footer-board/contact-links/contact-links.html
@@ -10,12 +10,12 @@
     <app-mail-link />
     <ul>
       <li class="contact-link-linkedin">
-        <a href="https://www.linkedin.com/in/pierre-charles-sénard-vallois-742a52309/" target="_blank">
+        <a href="https://www.linkedin.com/in/pierre-charles-sénard-vallois-742a52309/" target="_blank" aria-label="open linkedin">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
       </li>
       <li class="contact-link-github">
-        <a href="https://github.com/CharlesVall" target="_blank">
+        <a href="https://github.com/CharlesVall" target="_blank" aria-label="open github">
           <i class="fa-brands fa-github"></i>        
         </a>
       </li>
