--- a/src/app/landing/contact/footer-board/download-button/download-button.html
+++ b/src/app/landing/contact/footer-board/download-button/download-button.html
@@ -1,9 +1,17 @@
-<div class="button-wrapper" [style.--magic-color]="magicColor()" (click)="downloadCV()">
-  <button class="button" aria-label="Télécharger le CV de Pierre-Charles en format PDF" title="Télécharger le CV (PDF)">
+<a
+  class="button-wrapper"
+  [style.--magic-color]="magicColor()"
+  href="files/CV-Sénard--Vallois.pdf"
+  target="_blank"
+  rel="noopener noreferrer"
+  aria-label="Ouvrir le CV de Pierre-Charles en format PDF"
+  title="Ouvrir le CV (PDF)"
+>
+  <button class="button" type="button">
     <div class="bump-circle"></div>
     <div class="button-box">
       <span class="button-elem">
-         <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"
           />
@@ -11,4 +19,4 @@
       </span>
     </div>
   </button>
-</div>
+</a>
