--- a/src/app/landing/work/work-card/work-card.scss
+++ b/src/app/landing/work/work-card/work-card.scss
@@ -73,6 +73,7 @@ $anim-speed: 8s;
   border-radius: $card-radius;
   background-color: var(--black);
   box-shadow: 0px -16px 24px 0px rgba(255, 255, 255, 0.25) inset;
+  transition: box-shadow 1s ease;
   @media (max-width: 768px) {
     max-width: 100%;
     height: auto;
@@ -161,6 +162,10 @@ $anim-speed: 8s;
       width: 100%;
       height: 100%;
     }
+  }
+  &:hover {
+    box-shadow: 0px 16px 25px rgba(255, 255, 255, 0.393) inset;
+    transition: 0.5s;
   }
 }
 
