fix: linkedin lnk updated

--- a/src/app/landing/contact/footer-board/contact-links/contact-links.html
+++ b/src/app/landing/contact/footer-board/contact-links/contact-links.html
@@ -10,7 +10,7 @@
     <app-mail-link />
     <ul>
       <li class="contact-link-linkedin">
-        <a href="https://www.linkedin.com/in/pierre-charles-sénard-vallois-742a52309/" target="_blank" aria-label="open linkedin">
+        <a href="https://www.linkedin.com/in/pierre-charles-sénard-vallois/" target="_blank" aria-label="open linkedin">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
       </li>
