style: fixed contact size, work fade-in

--- a/src/app/landing/contact/footer-board/footer-board.scss
+++ b/src/app/landing/contact/footer-board/footer-board.scss
@@ -32,9 +32,9 @@
           }
         }
         @media (max-width: 480px) {
-          font-size: 1.3rem;
+          font-size: 1.6rem;
           br {
-            display: block;
+            display: none;
           }
         }
       }
