--- a/src/app/landing/contact/footer-board/contact-links/mail-link/mail-link.scss
+++ b/src/app/landing/contact/footer-board/contact-links/mail-link/mail-link.scss
@@ -7,10 +7,8 @@
   z-index: 0;
   display: inline-block;
   @media (max-width: 780px) {
-    font-size: clamp(1rem, 1.4rem, 1.8rem);
-  }
-  @media (max-width: 480px) {
-    font-size: clamp(1rem, 1rem, 1.2rem);
+    font-size: 1.4rem;
+    margin-bottom: 0.3rem;
   }
 }
 
