core(cv): updated cv file

--- a/src/app/landing/contact/footer-board/download-button/download-button.html
+++ b/src/app/landing/contact/footer-board/download-button/download-button.html
@@ -1,7 +1,7 @@
 <a
   class="button-wrapper"
   [style.--magic-color]="magicColor()"
-  href="files/CV-Sénard--Vallois.pdf"
+  href="files/CV_Sénard--Vallois_Développeur_Web.pdf"
   target="_blank"
   rel="noopener noreferrer"
   aria-label="Ouvrir le CV de Pierre-Charles en format PDF"
