--- a/src/app/landing/header/header.scss
+++ b/src/app/landing/header/header.scss
@@ -21,9 +21,10 @@ header {
     }
     .name-displayer {
       display: flex;
-      p {
+      h1 {
         margin: 0;
         width: 100%;
+        font-size: 1rem;
         .name {
         font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         opacity: 1;
